--- a/write-yourself-a-scheme.cabal
+++ b/write-yourself-a-scheme.cabal
@@ -18,6 +18,7 @@ executable week1
   build-depends:       base
                      , parsec
                      , mtl
+                     , haskeline
   hs-source-dirs:      src
   --ghc-options:         -Wall
   default-language:    Haskell2010
